# GPLearnFinance3D

./: add_ts_function.py  genetic.py
C++/: CMakeLists.txt
C++/include/: fitness.h
C++/src/: fitness.cpp
